[package]
name = "jess-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
openai-api-rs = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
openai_client = "0.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
serde_derive = "^1"
spinners = "4.1.0"
warp = "0.3.1"